--- a/iMoonLab-HGNN-Our-Data/HGNN/config/config.yaml
+++ b/iMoonLab-HGNN-Our-Data/HGNN/config/config.yaml
@@ -1,62 +1,30 @@
 # config.yaml
-#------------------------------------------------------------------#
-# must check the direction of data_root and result_root before run #
-#------------------------------------------------------------------#
+# Data Path
+data_root: &data_root home/kuinisw5/data
+econfinnews_raw: !join [*data_root, EconFinNews_Raw.json]
 
-#configure feature path
-#  please must modify the data_root before first running 
-data_root: &d_r home/fengyifan/data/features
-modelnet40_ft: !join [*d_r, ModelNet40_mvcnn_gvcnn.mat]
-ntu2012_ft: !join [d_r, NTU2012_mvcnn_gvcnn.mat]
-
-#Hypergraph
+# Hypergraph Option
 graph_type: &g_t hypergraph
-# K_neigs: [10]
-K_neigs: [10, 15, 20]
-# m_prob: 1.0
-m_prob: 0.8
+K_neigs: [10, 15, 20] # [10]
+m_prob: 0.8 # 1.0
 is_probH: True
-#---------------------------------------
-# change me
-# use_mvcnn_feature_for_structure: True
-# use_gvcnn_feature_for_structure: True
-use_mvcnn_feature_for_structure: False
-use_gvcnn_feature_for_structure: False
-#---------------------------------------
 
-#Model
-#--------------------------------------------------
-# select the dataset you use, ModelNet40 or NTU2012
-on_dataset: &o_d ModelNet40
-#on_dataset: &o_d NTU2012
-#--------------------------------------------------
+# Model
+on_dataset: &o_d EconFinNews
 
-#---------------------------------------
-# change me
-# use_mvcnn_feature: False
-# use_gvcnn_feature: True
-use_mvcnn_feature: False
-use_gvcnn_feature: False
-#---------------------------------------
-
-#Result
-# configure result path
-#  please must modify the result_root before first running 
-result_root: &r_r home/fengyifan/result/hgnn
+# Result Path
+result_root: &r_r home/kuinisw5/result/hgnn
 result_sub_folder: !join [*r_r, !concat [ *g_t, _, *o_d ]]
 ckpt_folder: !join [*r_r, ckpt]
 
-#Train
+# Train
 max_epoch: 800
 n_hid: 256
 lr: 0.0005
-# milestones: [100]
-milestones: [100, 300, 500]
-# gamma: 0.9
-gamma: 0.7
+milestones: [100]
+gamma: 0.9
 drop_out: 0.3
 print_freq: 50
-# weight_decay: 0.0005
-weight_decay: 0.005
+weight_decay: 0.0005
 decay_step: 150
 decay_rate: 0.8
