--- a/HGNN-rec/config/config.yaml
+++ b/HGNN-rec/config/config.yaml
@@ -1,30 +1,48 @@
-# config.yaml
-# Data Path
-data_root: &data_root data
-econfinnews_raw: !join [*data_root, EconFinNews_Raw_soo.json]
+# config/config.yaml
+# Basic Configuration
+data_root: &data_root "data"
+econfinnews_raw: !join [*data_root, "EconFinNews_Raw.json"]
 
-# Hypergraph Option
-graph_type: &g_t hypergraph
-K_neigs: [10, 15, 20] # [10]
-m_prob: 0.8 # 1.0
-is_probH: True
+# Model Configuration
+model:
+  name: HGNN_Recommender
+  in_dim: 128  # Word2Vec dimension
+  hidden_dim: 256
+  embedding_dim: 128
+  dropout: 0.5
 
-# Model
-on_dataset: &o_d EconFinNews
+# Hypergraph Configuration
+hypergraph:
+  construction_method: natural  # [natural, knn]
+  edge_weight_method: basic    # [basic, weighted]
+  
+  # KNN 관련 설정 (legacy support)
+  k_neigs: [10, 15, 20]
+  m_prob: 0.8
+  is_probH: true  # True를 true로 변경
 
-# # Result Path
-# result_root: &r_r home/kuinisw5/result/hgnn
-# result_sub_folder: !join [*r_r, !concat [ *g_t, _, *o_d ]]
-# ckpt_folder: !join [*r_r, ckpt]
+# Training Configuration
+training:
+  max_epochs: 800
+  batch_size: 64
+  learning_rate: 0.0005
+  weight_decay: 0.0005
+  scheduler:
+    milestones: [100]
+    gamma: 0.9
+  early_stopping:
+    patience: 10
+    min_delta: 0.001
 
-# Train
-max_epoch: 800
-n_hid: 256
-lr: 0.0005
-milestones: [100]
-gamma: 0.9
-drop_out: 0.3
-print_freq: 50
-weight_decay: 0.0005
-decay_step: 150
-decay_rate: 0.8
+# Recommendation Configuration
+recommendation:
+  top_k: 5
+  min_similarity: 0.9
+  max_hops: 2
+
+# Future Extensions
+extensions:
+  use_temporal: false
+  use_attention: false
+  use_kf_deberta: false
+  use_hierarchical_relations: false
