fix: update UI and resolve bugs

--- a/Chrome_Extension/manifest.json
+++ b/Chrome_Extension/manifest.json
@@ -1,10 +1,18 @@
 {
     "manifest_version": 3,
     "name": "Fin￦i$E",
-    "version": "1.0",
-    "permissions": ["sidePanel", "activeTab", "scripting"],
+    "version": "1.1",
+    "permissions": [
+        "sidePanel",
+        "activeTab",
+        "scripting",
+        "storage"
+    ],
+    "web_accessible_resources": [{
+        "resources": ["images/icon.png"],
+        "matches": ["<all_urls>"]
+    }],
     "action": {
-        "default_popup": "popup.html",
         "default_icon": "images/icon.png"
     },
     "background": {
@@ -18,5 +26,11 @@
     ],
     "side_panel": {
         "default_path": "sidepanel.html"
+    },
+    "icons": {
+        "16": "images/icon.png",
+        "32": "images/icon.png",
+        "48": "images/icon.png",
+        "128": "images/icon.png"
     }
 }
