--- a/HGNN/config/config.yaml
+++ b/HGNN/config/config.yaml
@@ -1,21 +1,25 @@
 data:
-  pairwise_pmi_path: "data/pairwise_pmi.json"
-  verb_single_keyword_pmi_path: "data/verb_single_keyword_pmi.json"
-  raw_data_path: "data/final_dataset2.json"
-  processed_data_path: "data/processed_data/hgnn_input.pt"
+  pairwise_pmi_path: "data/pairwise_pmi_values3.json"
+  raw_data_path: "data/dataset/final_dataset3.json"
+  processed_data_path: "data/processed_data/hgnn_data2.pt" # HGNN 모델 학습을 위한 최종 데이터셋
 
 model:
-  in_features: 100
+  in_features: 500
   hidden_features: 64
-  out_features: 12
-  dropout: 0.5
+  out_features: 13  # 클래스 개수 (12개 + 1)
+  # dropout: 0.3
 
 training:
-  lr: 0.001
+  lr: 0.0001
   weight_decay: 0.0001
   epochs: 200
-  batch_size: 64
-
-visualization:
+  batch_size: 32
   save_dir: "results/models"
-  style: "whitegrid"
+  checkpoint_interval: 10
+
+# Visualization configuration  # Added
+visualization:
+  save_dir: "results/plots"
+  style: "whitegrid"  # seaborn style
+  metrics:
+    eval_interval: 10  # Evaluate every N epochs
