--- a/FastAPI/Dockerfile
+++ b/FastAPI/Dockerfile
@@ -1,4 +1,12 @@
+# Dockerfile
 FROM python:3.8-slim
+
+RUN apt-get update && apt-get install -y \
+    openjdk-17-jdk \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
+
+ENV JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
 
 WORKDIR /app
 
